Update spanish localizations

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -6,7 +6,7 @@
   "login": "Iniciar sesión",
   "signUp": "Registrarse",
   "loginTitle": "Iniciar sesión en White Noise",
-  "enterPrivateKey": "Introduce tu clave privada",
+  "enterPrivateKey": "Introduce tu llave privada",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurar perfil",
   "chooseName": "Elige un nombre",
@@ -20,7 +20,7 @@
   "startChat": "Iniciar chat",
   "settings": "Configuración",
   "editProfile": "Editar perfil",
-  "profileKeys": "Claves del perfil",
+  "profileKeys": "Llaves del perfil",
   "networkRelays": "Relés de red",
   "appSettings": "Ajustes de la app",
   "donateToWhiteNoise": "Donar a White Noise",
@@ -31,15 +31,15 @@
   "themeSystem": "Sistema",
   "themeLight": "Claro",
   "themeDark": "Oscuro",
-  "profileKeysTitle": "Claves del perfil",
-  "publicKey": "Clave pública",
-  "publicKeyCopied": "Clave pública copiada al portapapeles",
-  "publicKeyDescription": "Tu clave pública (npub) puede compartirse con otros. Se usa para identificarte en la red.",
-  "privateKey": "Clave privada",
-  "privateKeyCopied": "Clave privada copiada al portapapeles",
-  "privateKeyDescription": "Tu clave privada (nsec) debe mantenerse en secreto. Cualquiera con acceso a ella puede controlar tu cuenta.",
-  "keepPrivateKeySecure": "Mantén tu clave privada segura",
-  "privateKeyWarning": "No compartas tu clave privada públicamente y úsala solo para iniciar sesión en otras apps de Nostr.",
+  "profileKeysTitle": "Llaves del perfil",
+  "publicKey": "Llave pública",
+  "publicKeyCopied": "Llave pública copiada al portapapeles",
+  "publicKeyDescription": "Tu llave pública (npub) puede compartirse con otros. Se usa para identificarte en la red.",
+  "privateKey": "Llave privada",
+  "privateKeyCopied": "Llave privada copiada al portapapeles",
+  "privateKeyDescription": "Tu llave privada (nsec) debe mantenerse en secreto. Cualquiera con acceso a ella puede controlar tu cuenta.",
+  "keepPrivateKeySecure": "Mantén tu llave privada segura",
+  "privateKeyWarning": "No compartas tu llave privada públicamente y úsala solo para iniciar sesión en otros servicios de Nostr.",
   "editProfileTitle": "Editar perfil",
   "profileName": "Nombre del perfil",
   "nostrAddress": "Dirección Nostr",
@@ -59,8 +59,8 @@
   "myRelaysHelp": "Relés que has definido para usar en todas tus aplicaciones Nostr.",
   "inboxRelays": "Relés de Bandeja de Entrada",
   "inboxRelaysHelp": "Relés usados para recibir invitaciones e iniciar conversaciones seguras con nuevos usuarios.",
-  "keyPackageRelays": "Relés de Paquete de Claves",
-  "keyPackageRelaysHelp": "Relés que almacenan tu clave segura para que otros puedan invitarte a conversaciones cifradas.",
+  "keyPackageRelays": "Relés de Paquete de Llaves",
+  "keyPackageRelaysHelp": "Relés que almacenan tu llave segura para que otros puedan invitarte a conversaciones cifradas.",
   "errorLoadingRelays": "Error al cargar los relés",
   "noRelaysConfigured": "No hay relés configurados",
   "donateTitle": "Donar a White Noise",
@@ -72,9 +72,9 @@
   "scanToConnect": "Escanear para conectar",
   "signOutTitle": "Cerrar sesión",
   "signOutConfirmation": "¿Estás seguro de que quieres cerrar sesión?",
-  "signOutWarning": "Cuando cierres sesión en White Noise, tus chats se eliminarán de este dispositivo y no podrán restaurarse en otro dispositivo.\n\nSi no has respaldado tu clave privada, no podrás usar este perfil en ningún otro servicio Nostr.",
-  "backUpPrivateKey": "Respalda tu clave privada",
-  "copyPrivateKeyHint": "Copia tu clave privada para restaurar tu cuenta en otro dispositivo.",
+  "signOutWarning": "Cuando cierres sesión en White Noise, tus chats se eliminarán de este dispositivo y no podrán restaurarse en otro dispositivo.\n\nSi no has respaldado tu llave privada, no podrás usar este perfil en ningún otro servicio Nostr.",
+  "backUpPrivateKey": "Respalda tu llave privada",
+  "copyPrivateKeyHint": "Copia tu llave privada para restaurar tu cuenta en otro dispositivo.",
   "noChatsYet": "Aún no hay chats",
   "startConversation": "Inicia una conversación",
   "noMessagesYet": "Aún no hay mensajes",
@@ -89,11 +89,11 @@
   "noResults": "Sin resultados",
   "noFollowsYet": "Aún no hay seguidos",
   "developerSettingsTitle": "Ajustes de Desarrollador",
-  "publishNewKeyPackage": "Publicar Nuevo Paquete de Claves",
-  "refreshKeyPackages": "Actualizar Paquetes de Claves",
-  "deleteAllKeyPackages": "Eliminar Todos los Paquetes de Claves",
-  "keyPackagesCount": "Paquetes de Claves ({count})",
-  "noKeyPackagesFound": "No se encontraron paquetes de claves",
+  "publishNewKeyPackage": "Publicar Nuevo Paquete de Llaves",
+  "refreshKeyPackages": "Actualizar Paquetes de Llaves",
+  "deleteAllKeyPackages": "Eliminar Todos los Paquetes de Llaves",
+  "keyPackagesCount": "Paquetes de Llaves ({count})",
+  "noKeyPackagesFound": "No se encontraron paquetes de llaves",
   "packageNumber": "Paquete {number}",
   "ohNo": "¡Oh no!",
   "goBack": "Volver",
@@ -103,7 +103,7 @@
   "donate": "Donar",
   "addRelay": "Añadir Relé",
   "enterRelayAddress": "Introduce la dirección del relé",
-  "relayAddressPlaceholder": "wss://relay.example.com",
+  "relayAddressPlaceholder": "wss://rele.ejemplo.com",
   "removeRelay": "¿Eliminar Relé?",
   "removeRelayConfirmation": "¿Estás seguro de que quieres eliminar este relé? Esta acción no se puede deshacer.",
   "remove": "Eliminar",
