feat(settings): redesign header with Share & connect button
- Replace inline QR icon button with full-width 'Share & connect' primary button
- Add 'Switch profile' button below with proper 8px spacing between buttons
- Update text styles to match Figma design (line height, letter spacing)
- Add shareAndConnect and switchProfile localization keys for all 8 languages
- Update tests to reflect new UI structure

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Profil teilen",
   "startChat": "Chat starten",
   "settings": "Einstellungen",
+  "shareAndConnect": "Teilen & verbinden",
+  "switchProfile": "Profil wechseln",
   "editProfile": "Profil bearbeiten",
   "profileKeys": "Profilschlüssel",
   "networkRelays": "Netzwerk-Relays",
