--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Compartir tu perfil",
   "startChat": "Iniciar chat",
   "settings": "Configuración",
+  "shareAndConnect": "Compartir y conectar",
+  "switchProfile": "Cambiar perfil",
   "editProfile": "Editar perfil",
   "profileKeys": "Llaves del perfil",
   "networkRelays": "Relés de red",
