--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Partager votre profil",
   "startChat": "Démarrer une discussion",
   "settings": "Paramètres",
+  "shareAndConnect": "Partager et connecter",
+  "switchProfile": "Changer de profil",
   "editProfile": "Modifier le profil",
   "profileKeys": "Clés du profil",
   "networkRelays": "Relais réseau",
