--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Condividi il tuo profilo",
   "startChat": "Inizia una chat",
   "settings": "Impostazioni",
+  "shareAndConnect": "Condividi e connetti",
+  "switchProfile": "Cambia profilo",
   "editProfile": "Modifica profilo",
   "profileKeys": "Chiavi del profilo",
   "networkRelays": "Relay di rete",
