--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Compartilhar seu perfil",
   "startChat": "Iniciar conversa",
   "settings": "Configurações",
+  "shareAndConnect": "Compartilhar e conectar",
+  "switchProfile": "Trocar perfil",
   "editProfile": "Editar perfil",
   "profileKeys": "Chaves do perfil",
   "networkRelays": "Relays de rede",
