--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Поделиться профилем",
   "startChat": "Начать чат",
   "settings": "Настройки",
+  "shareAndConnect": "Поделиться и подключиться",
+  "switchProfile": "Сменить профиль",
   "editProfile": "Редактировать профиль",
   "profileKeys": "Ключи профиля",
   "networkRelays": "Сетевые реле",
