--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -19,6 +19,8 @@
   "shareYourProfile": "Profilini paylaş",
   "startChat": "Sohbet başlat",
   "settings": "Ayarlar",
+  "shareAndConnect": "Paylaş ve bağlan",
+  "switchProfile": "Profil değiştir",
   "editProfile": "Profili düzenle",
   "profileKeys": "Profil anahtarları",
   "networkRelays": "Ağ röleleri",
