feat: add translation for reaction error message

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -112,6 +112,7 @@
   "delete": "Supprimer",
   "failedToDeleteMessage": "Échec de la suppression du message. Veuillez réessayer.",
   "failedToSendReaction": "Échec de l'envoi de la réaction. Veuillez réessayer.",
+  "failedToRemoveReaction": "Échec de la suppression de la réaction. Veuillez réessayer.",
   "unknownUser": "Utilisateur inconnu",
   "unknownGroup": "Groupe inconnu",
   "hasInvitedYouToSecureChat": "Vous a invité à une discussion sécurisée",
