--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -112,6 +112,7 @@
   "delete": "Elimina",
   "failedToDeleteMessage": "Eliminazione del messaggio fallita. Riprova.",
   "failedToSendReaction": "Invio della reazione fallito. Riprova.",
+  "failedToRemoveReaction": "Rimozione della reazione fallita. Riprova.",
   "unknownUser": "Utente sconosciuto",
   "unknownGroup": "Gruppo sconosciuto",
   "hasInvitedYouToSecureChat": "Ti ha invitato a una chat sicura",
