--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -112,6 +112,7 @@
   "delete": "Eliminar",
   "failedToDeleteMessage": "Error al eliminar el mensaje. Por favor, inténtalo de nuevo.",
   "failedToSendReaction": "Error al enviar la reacción. Por favor, inténtalo de nuevo.",
+  "failedToRemoveReaction": "Error al eliminar la reacción. Por favor, inténtalo de nuevo.",
   "unknownUser": "Usuario desconocido",
   "unknownGroup": "Grupo desconocido",
   "hasInvitedYouToSecureChat": "Te ha invitado a un chat seguro",
