--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -112,6 +112,7 @@
   "delete": "Excluir",
   "failedToDeleteMessage": "Falha ao excluir mensagem. Por favor, tente novamente.",
   "failedToSendReaction": "Falha ao enviar reação. Por favor, tente novamente.",
+  "failedToRemoveReaction": "Falha ao remover reação. Por favor, tente novamente.",
   "unknownUser": "Usuário desconhecido",
   "unknownGroup": "Grupo desconhecido",
   "hasInvitedYouToSecureChat": "Convidou você para uma conversa segura",
