--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -112,6 +112,7 @@
   "delete": "Удалить",
   "failedToDeleteMessage": "Не удалось удалить сообщение. Попробуйте снова.",
   "failedToSendReaction": "Не удалось отправить реакцию. Попробуйте снова.",
+  "failedToRemoveReaction": "Не удалось удалить реакцию. Попробуйте снова.",
   "unknownUser": "Неизвестный пользователь",
   "unknownGroup": "Неизвестная группа",
   "hasInvitedYouToSecureChat": "Пригласил вас в безопасный чат",
