--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -114,6 +114,7 @@
   "delete": "Löschen",
   "failedToDeleteMessage": "Nachricht konnte nicht gelöscht werden. Bitte erneut versuchen.",
   "failedToSendReaction": "Reaktion konnte nicht gesendet werden. Bitte erneut versuchen.",
+  "failedToRemoveReaction": "Reaktion konnte nicht entfernt werden. Bitte erneut versuchen.",
   "unknownUser": "Unbekannter Benutzer",
   "unknownGroup": "Unbekannte Gruppe",
   "hasInvitedYouToSecureChat": "Hat dich zu einem sicheren Chat eingeladen",
