--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -126,5 +126,10 @@
   "timeJustNow": "ahora mismo",
   "timeMinutesAgo": "{count, plural, =1{hace 1 minuto} other{hace {count} minutos}}",
   "timeHoursAgo": "{count, plural, =1{hace 1 hora} other{hace {count} horas}}",
-  "timeDaysAgo": "{count, plural, =1{ayer} other{hace {count} días}}"
+  "timeDaysAgo": "{count, plural, =1{ayer} other{hace {count} días}}",
+  "profile": "Perfil",
+  "follow": "Seguir",
+  "unfollow": "Dejar de seguir",
+  "failedToStartChat": "Error al iniciar el chat. Por favor, inténtalo de nuevo.",
+  "userNotOnWhiteNoise": "Este usuario aún no está en White Noise."
 }
