--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -126,5 +126,10 @@
   "timeJustNow": "только что",
   "timeMinutesAgo": "{count, plural, =1{1 минуту назад} few{{count} минуты назад} many{{count} минут назад} other{{count} минут назад}}",
   "timeHoursAgo": "{count, plural, =1{1 час назад} few{{count} часа назад} many{{count} часов назад} other{{count} часов назад}}",
-  "timeDaysAgo": "{count, plural, =1{вчера} few{{count} дня назад} many{{count} дней назад} other{{count} дней назад}}"
+  "timeDaysAgo": "{count, plural, =1{вчера} few{{count} дня назад} many{{count} дней назад} other{{count} дней назад}}",
+  "profile": "Профиль",
+  "follow": "Подписаться",
+  "unfollow": "Отписаться",
+  "failedToStartChat": "Не удалось начать чат. Попробуйте снова.",
+  "userNotOnWhiteNoise": "Этот пользователь ещё не в White Noise."
 }
