--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -131,5 +131,6 @@
   "follow": "Folgen",
   "unfollow": "Entfolgen",
   "failedToStartChat": "Chat konnte nicht gestartet werden. Bitte versuchen Sie es erneut.",
-  "userNotOnWhiteNoise": "Dieser Benutzer ist noch nicht bei White Noise."
+  "userNotOnWhiteNoise": "Dieser Benutzer ist noch nicht bei White Noise.",
+  "failedToUpdateFollow": "Folgestatus konnte nicht aktualisiert werden. Bitte versuchen Sie es erneut."
 }
