--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -131,5 +131,6 @@
   "follow": "Seguir",
   "unfollow": "Dejar de seguir",
   "failedToStartChat": "Error al iniciar el chat. Por favor, inténtalo de nuevo.",
-  "userNotOnWhiteNoise": "Este usuario aún no está en White Noise."
+  "userNotOnWhiteNoise": "Este usuario aún no está en White Noise.",
+  "failedToUpdateFollow": "Error al actualizar el estado de seguimiento. Por favor, inténtalo de nuevo."
 }
