--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -131,5 +131,6 @@
   "follow": "Подписаться",
   "unfollow": "Отписаться",
   "failedToStartChat": "Не удалось начать чат. Попробуйте снова.",
-  "userNotOnWhiteNoise": "Этот пользователь ещё не в White Noise."
+  "userNotOnWhiteNoise": "Этот пользователь ещё не в White Noise.",
+  "failedToUpdateFollow": "Не удалось обновить статус подписки. Попробуйте снова."
 }
