Fix Italian translation for failedToUpdateFollow

--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -132,5 +132,5 @@
   "unfollow": "Smetti di seguire",
   "failedToStartChat": "Impossibile avviare la chat. Riprova.",
   "userNotOnWhiteNoise": "Questo utente non è ancora su White Noise.",
-  "failedToUpdateFollow": "Impossibile aggiornare lo stato di follow. Riprova."
+  "failedToUpdateFollow": "Impossibile aggiornare lo stato del seguito. Riprova."
 }
