Add start chat and chat info screens with follow/unfollow (#96)
* Add/update hooks

* Translations

* Update routes

* Add/update screens

* Add wn user profile card widget

* Add/update tests

* Update CHANGELOG.md

* Move isStartingChat reset to finally block

* Fix layout spacing for npub field

* Remove additionalButtons from user profile card

* Add rules for responsive sizing with flutter_screenutil

* Use test_helpers for user has key package test

* Add error handling for follow/unfollow actions

* Fix Italian translation for failedToUpdateFollow

* Call setUpTestView in test helper function

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -126,5 +126,11 @@
   "timeJustNow": "à l'instant",
   "timeMinutesAgo": "{count, plural, =1{il y a 1 minute} other{il y a {count} minutes}}",
   "timeHoursAgo": "{count, plural, =1{il y a 1 heure} other{il y a {count} heures}}",
-  "timeDaysAgo": "{count, plural, =1{hier} other{il y a {count} jours}}"
+  "timeDaysAgo": "{count, plural, =1{hier} other{il y a {count} jours}}",
+  "profile": "Profil",
+  "follow": "Suivre",
+  "unfollow": "Ne plus suivre",
+  "failedToStartChat": "Échec du démarrage de la discussion. Veuillez réessayer.",
+  "userNotOnWhiteNoise": "Cet utilisateur n'est pas encore sur White Noise.",
+  "failedToUpdateFollow": "Échec de la mise à jour du statut de suivi. Veuillez réessayer."
 }
