--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -132,5 +132,6 @@
   "unfollow": "Ne plus suivre",
   "failedToStartChat": "Échec du démarrage de la discussion. Veuillez réessayer.",
   "userNotOnWhiteNoise": "Cet utilisateur n'est pas encore sur White Noise.",
-  "failedToUpdateFollow": "Échec de la mise à jour du statut de suivi. Veuillez réessayer."
+  "failedToUpdateFollow": "Échec de la mise à jour du statut de suivi. Veuillez réessayer.",
+  "imagePickerError": "Échec de la sélection de l'image. Veuillez réessayer."
 }
