--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -132,5 +132,6 @@
   "unfollow": "Отписаться",
   "failedToStartChat": "Не удалось начать чат. Попробуйте снова.",
   "userNotOnWhiteNoise": "Этот пользователь ещё не в White Noise.",
-  "failedToUpdateFollow": "Не удалось обновить статус подписки. Попробуйте снова."
+  "failedToUpdateFollow": "Не удалось обновить статус подписки. Попробуйте снова.",
+  "imagePickerError": "Не удалось выбрать изображение. Попробуйте снова."
 }
