--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -132,5 +132,6 @@
   "unfollow": "Deixar de seguir",
   "failedToStartChat": "Falha ao iniciar a conversa. Por favor, tente novamente.",
   "userNotOnWhiteNoise": "Este usuário ainda não está no White Noise.",
-  "failedToUpdateFollow": "Falha ao atualizar o status de seguir. Por favor, tente novamente."
+  "failedToUpdateFollow": "Falha ao atualizar o status de seguir. Por favor, tente novamente.",
+  "imagePickerError": "Falha ao selecionar imagem. Por favor, tente novamente."
 }
