--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -132,5 +132,6 @@
   "unfollow": "Takibi bırak",
   "failedToStartChat": "Sohbet başlatılamadı. Lütfen tekrar deneyin.",
   "userNotOnWhiteNoise": "Bu kullanıcı henüz White Noise'da değil.",
-  "failedToUpdateFollow": "Takip durumu güncellenemedi. Lütfen tekrar deneyin."
+  "failedToUpdateFollow": "Takip durumu güncellenemedi. Lütfen tekrar deneyin.",
+  "imagePickerError": "Görsel seçilemedi. Lütfen tekrar deneyin."
 }
