fix(edit-profile): use medium button size and 'Discard' text for footer actions
- Add 'discard' localization key to all language files
- Update button text from 'Discard changes' to 'Discard'
- Use medium button size (44px)

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -49,6 +49,7 @@
   "aboutYou": "Über dich",
   "profileIsPublic": "Profil ist öffentlich",
   "profilePublicDescription": "Deine Profilinformationen sind für alle im Netzwerk sichtbar.",
+  "discard": "Verwerfen",
   "discardChanges": "Änderungen verwerfen",
   "save": "Speichern",
   "profileUpdatedSuccessfully": "Profil erfolgreich aktualisiert",
