--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -49,6 +49,7 @@
   "aboutYou": "Sobre ti",
   "profileIsPublic": "El perfil es público",
   "profilePublicDescription": "La información de tu perfil será visible para todos en la red.",
+  "discard": "Descartar",
   "discardChanges": "Descartar cambios",
   "save": "Guardar",
   "profileUpdatedSuccessfully": "Perfil actualizado correctamente",
