--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -49,6 +49,7 @@
   "aboutYou": "Su di te",
   "profileIsPublic": "Il profilo è pubblico",
   "profilePublicDescription": "Le informazioni del tuo profilo saranno visibili a tutti sulla rete.",
+  "discard": "Annulla",
   "discardChanges": "Annulla modifiche",
   "save": "Salva",
   "profileUpdatedSuccessfully": "Profilo aggiornato con successo",
