--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -49,6 +49,7 @@
   "aboutYou": "Sobre você",
   "profileIsPublic": "O perfil é público",
   "profilePublicDescription": "As informações do seu perfil serão visíveis para todos na rede.",
+  "discard": "Descartar",
   "discardChanges": "Descartar alterações",
   "save": "Salvar",
   "profileUpdatedSuccessfully": "Perfil atualizado com sucesso",
