--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -49,6 +49,7 @@
   "aboutYou": "О вас",
   "profileIsPublic": "Профиль публичный",
   "profilePublicDescription": "Информация вашего профиля будет видна всем в сети.",
+  "discard": "Отменить",
   "discardChanges": "Отменить изменения",
   "save": "Сохранить",
   "profileUpdatedSuccessfully": "Профиль успешно обновлён",
