--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -49,6 +49,7 @@
   "aboutYou": "Hakkınızda",
   "profileIsPublic": "Profil herkese açık",
   "profilePublicDescription": "Profil bilgileriniz ağdaki herkes tarafından görülebilir.",
+  "discard": "At",
   "discardChanges": "Değişiklikleri at",
   "save": "Kaydet",
   "profileUpdatedSuccessfully": "Profil başarıyla güncellendi",
