--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -49,6 +49,7 @@
   "aboutYou": "À propos de vous",
   "profileIsPublic": "Le profil est public",
   "profilePublicDescription": "Les informations de votre profil seront visibles par tous sur le réseau.",
+  "discard": "Annuler",
   "discardChanges": "Annuler les modifications",
   "save": "Enregistrer",
   "profileUpdatedSuccessfully": "Profil mis à jour avec succès",
