fix: address PR #128 code review feedback
- Add horizontal padding to WnChatHeader for better layout
- Reduce WnSlateNavigationHeader padding to prevent title truncation
- Remove bottom padding in user_search_screen and fix WnFadeOverlay color
- Add error handling for follow/unfollow in chat_info_screen
- Use localized string for add profile screen title
- Fix responsive sizing (.r for blurRadius, .h for bottom padding)
- Update test expectations and remove unnecessary comments

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -21,6 +21,7 @@
   "settings": "Einstellungen",
   "shareAndConnect": "Teilen & verbinden",
   "switchProfile": "Profil wechseln",
+  "addNewProfile": "Neues Profil hinzufügen",
   "editProfile": "Profil bearbeiten",
   "profileKeys": "Profilschlüssel",
   "networkRelays": "Netzwerk-Relays",
