--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -21,6 +21,7 @@
   "settings": "Paramètres",
   "shareAndConnect": "Partager et connecter",
   "switchProfile": "Changer de profil",
+  "addNewProfile": "Ajouter un nouveau profil",
   "editProfile": "Modifier le profil",
   "profileKeys": "Clés du profil",
   "networkRelays": "Relais réseau",
