--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -21,6 +21,7 @@
   "settings": "Impostazioni",
   "shareAndConnect": "Condividi e connetti",
   "switchProfile": "Cambia profilo",
+  "addNewProfile": "Aggiungi un nuovo profilo",
   "editProfile": "Modifica profilo",
   "profileKeys": "Chiavi del profilo",
   "networkRelays": "Relay di rete",
