--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -21,6 +21,7 @@
   "settings": "Configurações",
   "shareAndConnect": "Compartilhar e conectar",
   "switchProfile": "Trocar perfil",
+  "addNewProfile": "Adicionar um novo perfil",
   "editProfile": "Editar perfil",
   "profileKeys": "Chaves do perfil",
   "networkRelays": "Relays de rede",
