--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -106,6 +106,11 @@
     "description": "Button to switch between profiles"
   },
 
+  "addNewProfile": "Add a new profile",
+  "@addNewProfile": {
+    "description": "Title for add profile screen"
+  },
+
   "editProfile": "Edit profile",
   "@editProfile": {
     "description": "Settings menu item"
