--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -21,6 +21,7 @@
   "settings": "Настройки",
   "shareAndConnect": "Поделиться и подключиться",
   "switchProfile": "Сменить профиль",
+  "addNewProfile": "Добавить новый профиль",
   "editProfile": "Редактировать профиль",
   "profileKeys": "Ключи профиля",
   "networkRelays": "Сетевые реле",
