--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -21,6 +21,7 @@
   "settings": "Ayarlar",
   "shareAndConnect": "Paylaş ve bağlan",
   "switchProfile": "Profil değiştir",
+  "addNewProfile": "Yeni profil ekle",
   "editProfile": "Profili düzenle",
   "profileKeys": "Profil anahtarları",
   "networkRelays": "Ağ röleleri",
