fix: improve UI consistency and add developer settings notifications
- Change all slate buttons from large to medium size across screens
- Add system notifications in developer settings for action confirmations
- Fix sign out screen double horizontal padding issue
- Fix home screen RenderFlex overflow with SingleChildScrollView
- Use localized strings in WnAuthButtonsContainer
- Add key package success message localizations for all 8 locales

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Alle Schlüsselpakete löschen",
   "keyPackagesCount": "Schlüsselpakete ({count})",
   "noKeyPackagesFound": "Keine Schlüsselpakete gefunden",
+  "keyPackagePublished": "Schlüsselpaket veröffentlicht",
+  "keyPackagesRefreshed": "Schlüsselpakete aktualisiert",
+  "keyPackagesDeleted": "Alle Schlüsselpakete gelöscht",
+  "keyPackageDeleted": "Schlüsselpaket gelöscht",
   "packageNumber": "Paket {number}",
   "ohNo": "Oh nein!",
   "goBack": "Zurück",
