--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Eliminar Todos los Paquetes de Llaves",
   "keyPackagesCount": "Paquetes de Llaves ({count})",
   "noKeyPackagesFound": "No se encontraron paquetes de llaves",
+  "keyPackagePublished": "Paquete de llaves publicado",
+  "keyPackagesRefreshed": "Paquetes de llaves actualizados",
+  "keyPackagesDeleted": "Todos los paquetes de llaves eliminados",
+  "keyPackageDeleted": "Paquete de llaves eliminado",
   "packageNumber": "Paquete {number}",
   "ohNo": "¡Oh no!",
   "goBack": "Volver",
