--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Supprimer Tous les Paquets de Clés",
   "keyPackagesCount": "Paquets de Clés ({count})",
   "noKeyPackagesFound": "Aucun paquet de clés trouvé",
+  "keyPackagePublished": "Paquet de clés publié",
+  "keyPackagesRefreshed": "Paquets de clés actualisés",
+  "keyPackagesDeleted": "Tous les paquets de clés supprimés",
+  "keyPackageDeleted": "Paquet de clés supprimé",
   "packageNumber": "Paquet {number}",
   "ohNo": "Oh non !",
   "goBack": "Retour",
