--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Elimina Tutti i Pacchetti Chiavi",
   "keyPackagesCount": "Pacchetti Chiavi ({count})",
   "noKeyPackagesFound": "Nessun pacchetto chiavi trovato",
+  "keyPackagePublished": "Pacchetto chiavi pubblicato",
+  "keyPackagesRefreshed": "Pacchetti chiavi aggiornati",
+  "keyPackagesDeleted": "Tutti i pacchetti chiavi eliminati",
+  "keyPackageDeleted": "Pacchetto chiavi eliminato",
   "packageNumber": "Pacchetto {number}",
   "ohNo": "Oh no!",
   "goBack": "Torna indietro",
