--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Excluir Todos os Pacotes de Chaves",
   "keyPackagesCount": "Pacotes de Chaves ({count})",
   "noKeyPackagesFound": "Nenhum pacote de chaves encontrado",
+  "keyPackagePublished": "Pacote de chaves publicado",
+  "keyPackagesRefreshed": "Pacotes de chaves atualizados",
+  "keyPackagesDeleted": "Todos os pacotes de chaves excluídos",
+  "keyPackageDeleted": "Pacote de chaves excluído",
   "packageNumber": "Pacote {number}",
   "ohNo": "Oh não!",
   "goBack": "Voltar",
