--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Удалить Все Пакеты Ключей",
   "keyPackagesCount": "Пакеты Ключей ({count})",
   "noKeyPackagesFound": "Пакеты ключей не найдены",
+  "keyPackagePublished": "Пакет ключей опубликован",
+  "keyPackagesRefreshed": "Пакеты ключей обновлены",
+  "keyPackagesDeleted": "Все пакеты ключей удалены",
+  "keyPackageDeleted": "Пакет ключей удалён",
   "packageNumber": "Пакет {number}",
   "ohNo": "О нет!",
   "goBack": "Назад",
