--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -98,6 +98,10 @@
   "deleteAllKeyPackages": "Tüm Anahtar Paketlerini Sil",
   "keyPackagesCount": "Anahtar Paketleri ({count})",
   "noKeyPackagesFound": "Anahtar paketi bulunamadı",
+  "keyPackagePublished": "Anahtar paketi yayınlandı",
+  "keyPackagesRefreshed": "Anahtar paketleri yenilendi",
+  "keyPackagesDeleted": "Tüm anahtar paketleri silindi",
+  "keyPackageDeleted": "Anahtar paketi silindi",
   "packageNumber": "Paket {number}",
   "ohNo": "Ah hayır!",
   "goBack": "Geri dön",
