fix: UI improvements and localization updates
- Shorten loginTitle to just 'Login' (and translations) to prevent truncation
- Add vertical padding to WnSlate in chat screen for proper header spacing
- Remove WnAccountBar from onboarding screen (single slate per screen)
- Wire onboarding buttons to correct screens (share profile, user search)
- Add key to login button for unambiguous test targeting

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -5,7 +5,7 @@
   "tagline2": "Sichere Nachrichten.",
   "login": "Anmelden",
   "signUp": "Registrieren",
-  "loginTitle": "Bei White Noise anmelden",
+  "loginTitle": "Anmelden",
   "enterPrivateKey": "Privaten Schlüssel eingeben",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Profil einrichten",
