--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,7 +26,7 @@
     "description": "Sign up button text"
   },
 
-  "loginTitle": "Login to White Noise",
+  "loginTitle": "Login",
   "@loginTitle": {
     "description": "Title on login screen"
   },
