--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -5,7 +5,7 @@
   "tagline2": "Mensajería Segura.",
   "login": "Iniciar sesión",
   "signUp": "Registrarse",
-  "loginTitle": "Iniciar sesión en White Noise",
+  "loginTitle": "Iniciar sesión",
   "enterPrivateKey": "Introduce tu llave privada",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurar perfil",
