--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -5,7 +5,7 @@
   "tagline2": "Messagerie Sécurisée.",
   "login": "Connexion",
   "signUp": "S'inscrire",
-  "loginTitle": "Connexion à White Noise",
+  "loginTitle": "Connexion",
   "enterPrivateKey": "Entrez votre clé privée",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurer le profil",
