--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -5,7 +5,7 @@
   "tagline2": "Messaggistica Sicura.",
   "login": "Accedi",
   "signUp": "Registrati",
-  "loginTitle": "Accedi a White Noise",
+  "loginTitle": "Accedi",
   "enterPrivateKey": "Inserisci la tua chiave privata",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configura profilo",
