--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -5,7 +5,7 @@
   "tagline2": "Mensagens Seguras.",
   "login": "Entrar",
   "signUp": "Cadastrar",
-  "loginTitle": "Entrar no White Noise",
+  "loginTitle": "Entrar",
   "enterPrivateKey": "Digite sua chave privada",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurar perfil",
