--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -5,7 +5,7 @@
   "tagline2": "Безопасный Мессенджер.",
   "login": "Войти",
   "signUp": "Регистрация",
-  "loginTitle": "Вход в White Noise",
+  "loginTitle": "Войти",
   "enterPrivateKey": "Введите ваш приватный ключ",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Настройка профиля",
