--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -5,7 +5,7 @@
   "tagline2": "Güvenli Mesajlaşma.",
   "login": "Giriş Yap",
   "signUp": "Kayıt Ol",
-  "loginTitle": "White Noise'a Giriş Yap",
+  "loginTitle": "Giriş Yap",
   "enterPrivateKey": "Özel anahtarınızı girin",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Profil ayarla",
